aligned report fields